# SimplyMail

./: .gitignore  LICENSE  Package.swift  README.md  build.sh
Sources/SimplyMail/: rust_lib.swift  rust_libFFI.modulemap
Tests/SimplyMailTests/: SimplyMailTests.swift  TestCredentials.swift
rust-lib/: Cargo.toml
rust-lib/bindings/: rust_lib.cs  rust_lib.py  rust_lib.swift  rust_libFFI.h
rust-lib/bindings/include/: rust_libFFI.h
rust-lib/bindings/uniffi/rust_lib/: rust_lib.kt
rust-lib/src/: lib.rs  rust-lib.udl
rust_lib_framework.xcframework/: Info.plist
rust_lib_framework.xcframework/macos-arm64/Headers/: rust_libFFI.h
