[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
imap = "2.4.1"
native-tls = "0.2.11"
lettre = "0.11.4"
thiserror = "1.0.56"
uniffi = { version = "0.23.0", features=["build"] }

[build-dependencies]
uniffi_build = "0.23.0"
uniffi_bindgen = "0.23.0"
